crates/module-system/sov-modules-macros/tests/integration/rpc/expose_rpc_associated_type_not_static.stderr
error[E0425]: cannot find value `api_state_accessor` in this scope
  --> tests/integration/rpc/expose_rpc_associated_type_not_static.rs:97:26
   |
97 |                     .get(api_state_accessor)
   |                          ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `<T as TestSpec>::Data: std::default::Default` is not satisfied
   --> tests/integration/rpc/expose_rpc_associated_type_not_static.rs:108:8
    |
108 | struct Runtime<S: Spec, T: TestSpec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<S, T>: std::default::Default`
    |
note: required for `Runtime<S, T>` to implement `std::default::Default`
   --> tests/integration/rpc/expose_rpc_associated_type_not_static.rs:107:10
    |
107 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
    = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> tests/integration/rpc/expose_rpc_associated_type_not_static.rs:123:21
    |
123 |     let mut state = StateCheckpoint::new(storage);
    |                     ^^^^^^^^^^^^^^^^^^^^--------- an argument of type `&_` is missing
    |
note: associated function defined here
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/state/accessors/checkpoints.rs
    |
    |     pub fn new<K: Kernel<S, Da>, Da: DaSpec>(inner: S::Storage, kernel: &K) -> Self {
    |            ^^^
help: provide the argument
    |
123 |     let mut state = StateCheckpoint::new(storage, /* kernel */);
    |                                         ~~~~~~~~~~~~~~~~~~~~~~~

error[E0599]: no method named `to_working_set_unmetered` found for struct `GenesisStateAccessor` in the current scope
   --> tests/integration/rpc/expose_rpc_associated_type_not_static.rs:128:41
    |
128 |     let mut working_set = genesis_state.to_working_set_unmetered();
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `to_unmetered` with a similar name
    |
128 |     let mut working_set = genesis_state.to_unmetered();
    |                                         ~~~~~~~~~~~~
